--- a/src/app/component/install/install.component.html
+++ b/src/app/component/install/install.component.html
@@ -9,7 +9,7 @@
     </p>
     <p class="note">After clicking, installation may take a minute to complete.</p>
     <button
-      mat-raised-button
+      matButton="outlined"
       color="primary"
       (click)="installPWA()"
       [disabled]="installInProgress"
