difficulty estimation: v1 of difficulty estimate / completion time estimate

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -49,6 +49,17 @@
         <div class="stats">
           <app-stats [stats]="stats"></app-stats>
         </div>
+
+        @if (estimatedDifficultyDisplayEnabled) {
+          <div class="estimated">
+            <app-estimated-difficulty
+              [playArea]="
+                !gameBoard.isComplete() ? gameBoard.playArea : undefined
+              "
+              [gameNumber]="gameNumber"
+            ></app-estimated-difficulty>
+          </div>
+        }
       </div>
     </div>
   </div>
