--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -67,6 +67,10 @@
   align-items: center;
 }
 
+.estimated {
+  margin-top: 12px;
+}
+
 .next-game-container {
   text-align: center;
   max-height: 200px;
