displaying estimated par time

--- a/src/app/component/estimated-difficulty/estimated-difficulty.html
+++ b/src/app/component/estimated-difficulty/estimated-difficulty.html
@@ -2,5 +2,8 @@
   <div class="row">
     <strong>Difficulty</strong>
     <span>{{ percentileLabel }}</span>
+    <span>•</span>
+    <strong>Par Time</strong>
+    <span>{{ estimatedTimeLabel }}</span>
   </div>
 </div>
