adding ability to start a game over mid game

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,6 +23,13 @@
       <mat-icon>undo</mat-icon>
       Undo
     </button>
+
+    @if (showStartOver) {
+      <button mat-menu-item (click)="requestStartOver()">
+        <mat-icon>restart_alt</mat-icon>
+        Start Board Over
+      </button>
+    }
   }
 
   <button mat-menu-item routerLink="/documentation">
