feat(FP violation warning): showing warning if board can't be solved via first principals alone

--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -141,6 +141,20 @@
       <strong>No guessing:</strong> Logical deduction will always get you to the
       unique solution.
     </li>
+    <li>
+      <div class="icon-container">
+        <code
+          ><mat-icon class="warning-icon">report_problem</mat-icon>FP+ #</code
+        >
+      </div>
+      • This warning appears on about 3.4% of boards. It indicates that a board
+      cannot be solved using only <em>first-principles</em> logic (identifying
+      required and unusable cells based solely on their presence in a row,
+      column, or group). The <code>#</code> shown in the warning represents how
+      many cells can still be determined with first-principles alone. Beyond
+      that point, more advanced deduction methods are required to solve the
+      board.
+    </li>
   </ul>
 
   <h2>🌟 The Big Picture</h2>
