--- a/src/app/component/estimated-difficulty/estimated-difficulty.html
+++ b/src/app/component/estimated-difficulty/estimated-difficulty.html
@@ -2,6 +2,12 @@
   <div class="row">
     <strong>Difficulty</strong>
     <span>{{ percentileLabel }}</span>
+    @if (firstPrincipalViolationWarning) {
+      <div>
+        <mat-icon class="warning-icon">report_problem</mat-icon>
+        <span>{{ firstPrincipalViolationWarning }}</span>
+      </div>
+    }
     <span>•</span>
     <strong>Par Time</strong>
     <span>{{ estimatedTimeLabel }}</span>
