--- a/src/app/component/estimated-difficulty/estimated-difficulty.scss
+++ b/src/app/component/estimated-difficulty/estimated-difficulty.scss
@@ -10,3 +10,13 @@
     gap: 6px;
   }
 }
+
+.warning-icon {
+  color: light-dark(#ee0000, #ff3a3a);
+  font-size: 1em;
+  height: unset;
+  width: unset;
+  margin-bottom: -0.15em;
+  margin-right: 0.2em;
+  margin-left: 0.1em;
+}
