--- a/src/app/component/documentation/documentation.scss
+++ b/src/app/component/documentation/documentation.scss
@@ -76,12 +76,11 @@
 }
 
 
-.icon-container {
-  display: inline;
-}
-
 .warning-icon {
   color: light-dark(#ee0000, #ff3a3a);
+}
+
+.icon {
   font-size: 1em;
   height: unset;
   width: unset;
