--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -146,28 +146,29 @@
       <span>
         <code
           ><mat-icon class="icon warning-icon">report_problem</mat-icon>FP+
-          #</code
+          #-#</code
         >
       </span>
       • This warning appears on about 3.4% of boards. It indicates that a board
       cannot be solved using only <em>first-principles</em> logic (identifying
       required and unusable cells based solely on their presence in a row,
-      column, or group). The <code>#</code> shown in the warning represents how
-      many cells can still be determined with first-principles alone. Beyond
-      that point, more advanced deduction methods are required to solve the
-      board.
+      column, or group). The <code>#-#</code> shown in the warning represents
+      how many cells <code>[can't]-[can]</code> be determined with
+      first-principles alone. Beyond that point, more advanced deduction methods
+      are required to solve the board.
     </li>
 
     <li>
       <span>
-        <code><mat-icon class="icon">undo</mat-icon>Undo</code>
+        <code><mat-icon class="icon">undo</mat-icon>Undo</code> in the
+        <span>
+          <code><mat-icon class="icon">more_vert</mat-icon></code>
+        </span>
+        menu
       </span>
-      • Ah yes, the <strong>Undo</strong> button in the
-      <span>
-        <code><mat-icon class="icon">more_vert</mat-icon></code>
-      </span>
-      menu — your safety net for when the game occasionally misreads a gesture
-      (or when your finger slips because snacks are involved).
+      • Ah yes, the Undo button — your safety net for when the game occasionally
+      misreads a gesture (or when your finger slips because snacks are
+      involved).
       <p>
         Sure, you <em>could</em> use it to quietly erase mistakes and stretch
         out that precious winning streak… but let's be honest, Tony's mom would
@@ -175,7 +176,8 @@
       </p>
       <p>
         So, use Undo when the game messes up. Abuse it, and hey — that victory
-        will taste about as authentic as a microwaved croissant.
+        will taste about as authentic as a dish of
+        <em>tagliatelle al tartufo</em> from a gas station.
       </p>
     </li>
   </ul>
