style(): blank board wasn't formatting correctly because of scratch pad

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -155,7 +155,7 @@
         </table>
       </div>
 
-      @if (scratchPadVisible && nextGameButtonState === "hidden") {
+      @if (scratchPadVisible) {
         <div
           class="scratch-container"
           #scratchContainer
