style(): backdrop on celebration wasn't partially transparent

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,9 @@ button {
 .overscroll {
   margin-bottom: 50vh;
 }
+
+.transparent-backdrop,
+.transparent-backdrop .mat-mdc-dialog-surface {
+  background: transparent !important;
+  box-shadow: none !important;
+}
